packages/components/table/style/size.less
.table-size( @font-size, @head-height, @body-height, @padding-horizontal) {
  font-size: @font-size;
  line-height: calc(@font-size + var(--ix-line-height-gutter));

  &:not(.@{table-prefix}-borderless) {
    > .@{header-prefix} {
      padding-left: @padding-horizontal;
      padding-right: @padding-horizontal;
    }
  }

  .@{table-prefix}-expandable-trigger {
    font-size: calc(@font-size + 2px);
  }

  th.@{table-prefix}-cell {
    height: @head-height;
    padding: 0 @padding-horizontal;

    .@{table-prefix}-sortable-trigger,
    .@{table-prefix}-filterable-trigger {
      height: @head-height;
    }

    &:not(:last-child)::before {
      height: calc(@head-height / 2);
    }
  }

  td.@{table-prefix}-cell,
  .@{table-prefix}-alert-row > td,
  .@{table-prefix}-expanded-row > td,
  .@{table-prefix}-footer {
    height: @body-height;
    padding: 4px @padding-horizontal;
  }

  // TODO: Nest Table
}

.@{table-prefix}-sm {
  .table-size(@table-font-size-sm, @table-head-row-height-sm, @table-body-row-height-sm, @table-row-padding-horizontal-sm);

  .@{table-prefix}-col-expandable,
  .@{table-prefix}-col-selectable {
    width: 32px;
  }

  .@{table-prefix}-col-selectable&-selectable-with-dropdown {
    width: 52px;
  }
}

.@{table-prefix}-md {
  .table-size(@table-font-size-md, @table-head-row-height-md, @table-body-row-height-md, @table-row-padding-horizontal-md);

  .@{table-prefix}-col-expandable,
  .@{table-prefix}-col-selectable {
    width: 40px;
  }

  .@{table-prefix}-col-selectable&-selectable-with-dropdown {
    width: 60px;
  }
}

.@{table-prefix}-lg {
  .table-size(@table-font-size-lg, @table-head-row-height-lg, @table-body-row-height-lg, @table-row-padding-horizontal-lg);

  .@{table-prefix}-col-expandable,
  .@{table-prefix}-col-selectable {
    width: 48px;
  }

  .@{table-prefix}-col-selectable&-selectable-with-dropdown {
    width: 68px;
  }
}

